service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
  namespace: foundry
spec:
  selector:
    app: foundry
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 30000
      targetPort: 30000
